# okteam

./: .gitignore  .pre-commit-config.yaml  LICENSE.txt  README.txt  create-upload.py  pyproject.toml  pyweek-upload.py  run_game.py  tasks.py
okteam/: main.py  settings.py  tsurka.py
