[tool.poetry]
name = "okteam"
version = "0.1.0"
description = "PyWeek 29 Entry."
authors = ["Oleksandr Fedorov <a.g.fedorof@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "~3.7"
pgzero = "^1.2"

[tool.poetry.dev-dependencies]
pyinstaller = "^3.6"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
